force-app/main/default/objects/VisMed_Receta__c/VisMed_Receta__c.object-meta.xml
<CustomObject>
    <label>Prescripciónes</label>
    <nameField>
        <displayFormat>PRE-{0000}</displayFormat>
        <label>Receta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prescripciónes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>