force-app/main/default/objects/VisMed_Receta__c/fields/Cuatrimestre__c.field-meta.xml
<CustomField>
    <fullName>Cuatrimestre__c</fullName>
    <label>Cuatrimestre</label>
    <referenceTo>VisMed_Cuatrimestre__c</referenceTo>
    <relationshipName>Recetas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>