force-app/main/default/objects/VisMed_Receta__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>VisMed_ProductoDeReceta__c</referenceTo>
    <relationshipName>Recetas</relationshipName>
    <type>Lookup</type>
</CustomField>