force-app/main/default/objects/VisMed_Receta__c/fields/Profesional_de_la_receta__c.field-meta.xml
<CustomField>
    <fullName>Profesional_de_la_receta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profesional</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Recetas</relationshipName>
    <type>Lookup</type>
</CustomField>