force-app/main/default/objects/VisMed_Receta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Profesional_de_la_receta__c</columns>
    <columns>Cuatrimestre__c</columns>
    <columns>Producto__c</columns>
    <columns>Cantidad__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>